# PoC_Rag

./: README.md  compose.yaml  db_utils.py  init.sql  main.py  pre_processamento.py  pyproject.toml  query_processing.py  web_page.py
notebooks/: Fine_tuning_gemma270m.ipynb
