[project]
name = "poc-rag"
version = "0.1.0"
description = "PoC demonstrando uma pipeline de IA para um assistente de perguntas e respostas."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awscli>=1.42.40",
    "ddgs>=9.6.0",
    "duckduckgo-search>=8.1.1",
    "langchain>=0.3.27",
    "langchain-aws>=0.2.33",
    "langchain-community>=0.3.30",
    "pillow>=11.3.0",
    "psycopg2>=2.9.10",
    "pypdf>=6.1.0",
    "streamlit>=1.50.0",
]
